# cocli

./: .aws_profile.example.env  .code_signatures.json  .dockerignore  .env  .envrc  .gitignore  .mise.toml  DISTRIBUTED_DATA_UPDATE_DATAGRAM_PROPAGATION.md  Dockerfile  EMAIL_INTEGRATION.md  GEMINI.md  HELP.md  MANIFEST.in  Makefile  PROMPT.md  README.md  anomalous_emails.csv  audit_report.json  cocli_share  companies_missing_keywords.csv  company_name_fixes.json  contamination_report_roadmap.csv  coverage_gap.csv  data  debug_campaigns.py  debug_website_scraper.py  enqueuable_targets.csv  enqueued_batch-v6-full.json  enqueued_batch-v6-test-1.json  enqueued_roadmap-enrich-v1.json  fix_google_maps_indentation.patch  generate_kml.py  import_kml_to_maps.py  install.sh  logs  lost_entries.json  migration_plan.txt  mypy.ini  opencode.json  plan.md  (+19 more)
.tmp/: duckdb_temp_block-4611686018427469550.block  duckdb_temp_block-4611686018427469551.block  duckdb_temp_block-4611686018427469563.block  duckdb_temp_block-4611686018427469564.block  duckdb_temp_block-4611686018427469565.block  duckdb_temp_block-4611686018427469566.block  duckdb_temp_block-4611686018427469567.block  duckdb_temp_block-4611686018427469578.block  duckdb_temp_block-4611686018427469579.block  duckdb_temp_block-4611686018427469580.block  duckdb_temp_block-4611686018427469581.block  duckdb_temp_block-4611686018427469593.block  duckdb_temp_block-4611686018427469594.block  duckdb_temp_block-4611686018427469595.block  duckdb_temp_block-4611686018427469596.block  duckdb_temp_block-4611686018427469597.block  duckdb_temp_block-4611686018427469609.block  duckdb_temp_block-4611686018427469610.block  duckdb_temp_block-4611686018427469611.block  duckdb_temp_block-4611686018427469612.block  duckdb_temp_block-4611686018427469623.block  duckdb_temp_block-4611686018427469624.block  duckdb_temp_block-4611686018427469625.block  duckdb_temp_block-4611686018427469626.block  duckdb_temp_block-4611686018427469627.block  duckdb_temp_block-4611686018427469636.block  duckdb_temp_block-4611686018427469637.block  duckdb_temp_block-4611686018427469638.block  duckdb_temp_block-4611686018427469639.block  duckdb_temp_block-4611686018427469641.block  duckdb_temp_block-4611686018427469642.block  duckdb_temp_block-4611686018427469654.block  duckdb_temp_block-4611686018427469655.block  duckdb_temp_block-4611686018427469656.block  duckdb_temp_block-4611686018427469657.block  duckdb_temp_block-4611686018427469658.block  duckdb_temp_block-4611686018427469671.block  duckdb_temp_block-4611686018427469672.block  duckdb_temp_block-4611686018427469673.block  duckdb_temp_block-4611686018427469674.block  (+3325 more)
campaigns/: README.md  config-template.toml
cdk_scraper_deployment/: app.py  cdk.context.json  requirements.txt
cocli/: core.py  entrypoint.sh  importers.py  main.py
cocli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: hubspot-contact-import-template.csv
docs/: 20260218_1749_turboship_enrichment.md  API.md  CAMPAIGN.md  ETL_SCENARIO.md  EVENT_SOURCING.md  FRICTIONLESS_DATA_POLICY_ENFORCEMENT.md  INDEX-INTERMEDIATES.md  LINTING_GUIDELINES.md  LOGGING.md  LOGGING_TUI_EVENTS.md  README.md  SPECIFICATION.md  TUI.md  architectural_review_view_command.md  data-manager-design.md  enrichment_policy.md  structure.md  tasks  wal-strategy.md
features/: campaign-view.md  campaign.feature  cli_help.feature  environment.py  find.feature  fz-command.md  fzf-command.md  git_sync.feature  google_maps_scraper.feature  lead-scrape.md  modular-enrichment-system.md  sanity.feature  unified-data-ordinance.feature
google_maps_results.json/: lead-sniper-photographer-20250822212409.csv
lib/: add-meeting  find
mk/: cluster.mk
scripts/: apply_name_fixes.py  audit_anomalous_emails.py  audit_campaign_data.py  audit_campaign_integrity.py  audit_canary_fidelity.py  audit_cluster_paths.py  audit_discovery_quality.py  audit_email_domains.py  audit_gossip_bridge.py  audit_identity_integrity.py  audit_prospect_quality.py  audit_queue_completion.py  audit_recovery_hashes.py  audit_restored_witnesses.py  audit_roadmap_contamination.py  audit_roadmap_metadata.py  audit_stale_queue.py  audit_wal_files.py  backfill_company_hash.py  backfill_details_queue.py  backfill_domain_index.py  backfill_email_index.py  backfill_ips.py  backfill_item_counts.py  batch_compile_companies.py  batch_re_scrape_test.py  calculate_saturation.py  campaign_report.py  capture_autoparts_ground_truth.py  capture_maps_snapshot.py  check_canary_fidelity.py  check_cluster_health.py  check_code_signature.py  check_live_search.py  check_lost_files.py  check_schema_compliance.py  check_scraper_version.py  clean_and_analyze_gm_list.py  clean_bad_review_count.py  clean_double_quotes.py  (+225 more)
test_data/: page_source_after_scroll_commercial_vinyl_flooring_contractor.html  page_source_after_scroll_pacific_life.html  page_source_after_scroll_rubber_flooring_contractor.html  page_source_after_scroll_sports_flooring_contractor.html  page_source_after_scroll_wealth_manager.html  page_source_before_scroll_commercial_vinyl_flooring_contractor.html  page_source_before_scroll_financial_planner.html  page_source_before_scroll_rubber_flooring_contractor.html  page_source_before_scroll_sports_flooring_contractor.html  page_source_before_scroll_wealth_manager.html
tests/: conftest.py  debug_google_maps_scraper.py  email.md  test_bdd_sanity.py  test_campaign.py  test_campaign_achieve_goal.py  test_campaign_edit.py  test_centralized_wal_logic.py  test_cli.py  test_cli_help.py  test_compilation_integrity.py  test_domain_index_manager.py  test_enrichment_ordinant.py  test_find.py  test_fz.py  test_git_sync.py  test_gm_list_parsing.py  test_google_maps_scraper.py  test_lead_scrape.py  (+6 more)
(+781 files in other folders)
