[project]
name = "cocli"
version = "0.2.0"
description = "A CLI for managing a plain-text CRM."
authors = [{ name = "Mark Stouffer", email = "mark@getbizkite.com" }]
requires-python = ">=3.8"
dependencies = [
    "typer",
    "pyyaml",
    "pydantic[email]",
    "fuzzywuzzy",
    "python-Levenshtein",
    "rich",
    "requests",
    "dateparser",
    "playwright",
    "beautifulsoup4",
    "pandas", # For XLSX to CSV conversion
    "openpyxl", # Backend for pandas to read XLSX
    "tomli", # For parsing TOML files
    "tomli_w", # For writing TOML files
    "simplekml",
    "toml",
    "httpx",
    "pydantic-settings", # Added for BaseSettings
    "transitions",
    "geopy",
    "fastapi",
    "uvicorn[standard]",
    "textual",
]

[project.scripts]
cocli = "cocli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-mock",
    "pytest-asyncio",
    "behave",
    "build",
    "mypy",
    "types-toml",
    "types-PyYAML",
    "types-requests",
    "pandas-stubs",
    "types-dateparser",
    "types-pytz",
    "ruff",
]

[tool.setuptools]
packages = ["cocli"]

[tool.uv]
package = true

[tool.mypy]
strict = true
ignore_missing_imports = false
exclude = [
    ".venv",
    "build",
    "dist",
    "docs",
    "features",
    "test_data",
    "tests",
    "backup",
    "cocli_data",
    "cocli.egg-info",
    "data",
]
follow_imports = "normal"

[[tool.mypy.overrides]]
module = [
    "aws_cdk.*",
    "constructs.*",
]
ignore_missing_imports = true