[project]
name = "cocli"
version = "0.2.0"
description = "A CLI for managing a plain-text CRM."
authors = [{ name = "Mark Stouffer", email = "mark@getbizkite.com" }]
requires-python = ">=3.8"
dependencies = [
    "typer",
    "pydantic",
    "rich",
    "textual",
    "requests",
    "beautifulsoup4",
    "pyyaml",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "selenium",
    "webdriver-manager",
    "lxml",
    "playwright",
    "pandas",
    "html5lib",
    "lxml_html_clean",
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "boto3",
    "simple-term-menu",
    "jmespath",
    "appdirs",
    "tomli",
    "tomli_w",
    "email-validator",
    "toml",
    "geopy",
    "dateparser",
    "httpx",
    "transitions",
    "fuzzywuzzy",
    "simplekml",
]

[project.scripts]
cocli = "cocli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-mock",
    "pytest-asyncio",
    "behave",
    "build",
    "mypy",
    "types-toml",
    "types-PyYAML",
    "types-requests",
    "pandas-stubs",
    "types-dateparser",
    "types-pytz",
    "ruff",
]

[tool.setuptools]
packages = ["cocli"]

[tool.uv]
package = true

[tool.mypy]
strict = true
ignore_missing_imports = false
mypy_path = "$MYPY_PATH"
exclude = [
    ".venv",
    "build",
    "dist",
    "docs",
    "features",
    "test_data",
    "tests",
    "backup",
    "cocli_data",
    "cocli.egg-info",
    "data",
    "cdk_scraper_deployment",
    "turboship", # Exclude the entire turboship directory
]
follow_imports = "normal"

[[tool.mypy.overrides]]
module = "cocli.core.website_cache"
disable_error_code = ["call-overload"]

[[tool.mypy.overrides]]
module = "cocli.tui.campaign_app"
disable_error_code = ["func-returns-value"]
