[project]
name = "cocli"
version = "0.2.0"
description = "A CLI for managing a plain-text CRM."
authors = [{ name = "Mark Stouffer", email = "mark@getbizkite.com" }]
requires-python = ">=3.9"
dependencies = [
    "typer",
    "pydantic",
    "rich",
    "requests",
    "beautifulsoup4",
    "pyyaml",
    "lxml",
    "playwright~=1.55.0",
    "html5lib",
    "lxml_html_clean",
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "boto3",
    "simple-term-menu",
    "jmespath",
    "appdirs",
    "tomli",
    "tomli_w",
    "email-validator",
    "toml",
    "geopy",
    "dateparser",
    "httpx",
    "transitions",
    "fuzzywuzzy",
    "simplekml",
    "python-dateutil",
    "psutil",
]

[project.scripts]
cocli = "cocli.main:app"

[project.optional-dependencies]
full = [
    "pandas",
    "textual",
    "selenium",
    "webdriver-manager",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-mock",
    "pytest-asyncio",
    "behave",
    "build",
    "mypy",
    "types-toml",
    "types-PyYAML",
    "types-requests",
    "pandas-stubs",
    "types-dateparser",
    "types-pytz",
    "types-psutil",
    "ruff",
    "boto3-stubs[s3,sqs]",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["cocli*"]
exclude = [
    "cocli_data*", 
    "data*",
    "cocli_share*",
    "homepage*",
    "logs*",
    "turboship*",
    "quickbooks-search*",
    "tests*", 
    "scripts*", 
    "build*", 
    "dist*", 
    "temp*", 
    ".logs*", 
    ".venv*", 
    ".mypy_cache*", 
    ".pytest_cache*", 
    ".ruff_cache*",
    "cocli.egg-info*",
    "cdk_scraper_deployment*"
]

[tool.uv]
package = true

[tool.mypy]
strict = true
ignore_missing_imports = false
mypy_path = "$MYPY_PATH"
exclude = [
    ".venv",
    "build",
    "dist",
    "docs",
    "features",
    "tests",
    "backup",
    "cocli_data",
    "cocli.egg-info",
    "data",
    "cdk_scraper_deployment",
    "turboship",
    "cdk.out",
    "quickbooks-search",
]
follow_imports = "normal"

[[tool.mypy.overrides]]
module = "cocli.core.website_cache"
disable_error_code = ["call-overload"]

[[tool.mypy.overrides]]
module = "cocli.tui.campaign_app"
disable_error_code = ["func-returns-value"]
